--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="form">
       <form>
         <div class="form-group">
-          <label for="search">Search Form</label>
-          <input type="email" class="form-control" id="search" placeholder="google balloon">
+          <label for="search">Search Term</label>
+          <input type="search" class="form-control" id="search" placeholder="google balloon">
         </div>
         <div class="form-group">
           <label for="number">Number of Records to Retrieve</label>
