--- a/index.html
+++ b/index.html
@@ -2,33 +2,45 @@
 <html lang="en">
 
 <head>
-  <title></title>
+  <title>New York Times Search</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="./node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-  <script src="./node_modules/jquery/dist/jquery.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/readable/bootstrap.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+    crossorigin="anonymous"></script>
   <script src="./index.js"></script>
 </head>
 
 <body>
   <div class="page-header">
-    <h1 class="text-center">New York Times Search</h1>
+    <h1 class="text-center text-primary">New York Times Search</h1>
   </div>
   <div class="container">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title">Search Parameters</h3>
+        <h3 class="panel-title"><i class="glyphicon glyphicon-list-alt"></i> Search Parameters</h3>
       </div>
       <div class="panel-body">
         <div class="form">
           <form>
-            <div class="form-group">
-              <label for="search">Search Term</label>
-              <input type="search" class="form-control" id="search" placeholder="google, election, ">
+            <div id="search-group" class="form-group">
+              <label id="search-label" for="search">Search Term</label>
+              <input type="search" class="form-control" id="search" placeholder="google, election, war...">
+              <p id="required-search-term" class="text-danger" style="display: none;">&nbsp;&nbsp;This field is required.</p>
             </div>
             <div class="form-group">
               <label for="number">Number of Records to Retrieve</label>
-              <input type="text" class="form-control" id="number" placeholder="10">
+              <select class="form-control" id="number">
+                <option>1</option>
+                <option>5</option>
+                <option>10</option>
+                <option selected="selected">15</option>
+                <option>20</option>
+                <option>25</option>
+                <option>30</option>
+              </select>
             </div>
             <div class="form-group">
               <label for="start-year">Start Year (Optional)</label>
@@ -49,9 +61,14 @@
     <br>
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title">Top Articles</h3>
+        <h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i> Top Articles <span id="search-term-append"></span></h3>
       </div>
-      <div id="articles" class="panel-body"></div>
+      <div class="panel-body">
+        <div id="not-found" class="alert alert-dismissible alert-danger" style="display: none;">
+          No Articles found. Try Different Search Term.
+        </div>
+        <div id="articles"></div>
+      </div>
     </div>
   </div>
 </body>
